# rl

./: .gitignore  968-diff.txt  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE-MIT  MESHFIT_PLAN.md  NOTICE  bothouse-1079.patch  build-job339.sh  epic-body.md  j680.diff  job1079.diff  job594.diff  review.diff  review2.diff  review2_err.txt  review2_out.txt  review2_report.txt  review_err.txt  review_out.txt  review_report.txt  rl232.diff  rl240-flip.diff  shell.nix  taskdir.txt  taskdir2.txt  tests-C.txt  verify-job339.sh
.cargo/: config.toml
_illustrate-658/: fanout.dot  grades.gp  rounds.dot
crab-world/: Cargo.toml  build.rs
crab-world/assets/: sally.glb
crab-world/assets/controls/: .gitignore
crab-world/assets/terrain/: gcr-seed281.terrain
crab-world/src/: app_boot.rs  assets.rs  build_info.rs  controls.rs  crab_view.rs  eval.rs  fnv.rs  ground.rs  ground.wgsl  lib.rs  mesh_fallback.rs  policy.rs  screenshot.rs  sky.rs  terrain.rs  vehicle.rs
crab-world/src/bot/: actuator.rs  body.rs  brain.rs  collider_check.rs  headless.rs  meshfit.rs  mod.rs  physics_digest.rs  pose_sentinel.rs  reset_test.rs  rig.rs  rig_audit.rs  sensor.rs  sim_truth_test.rs  skin.rs  snapshot.rs  test_util.rs
crab-world/src/bot/arch/: mlp256.rs  mlp512x3.rs  mod.rs
crab-world/src/bot/body/: collision.rs  components.rs  debug_gizmos.rs  joint_id.rs  mod.rs  spawn.rs
crab-world/src/bot/meshfit/: containment.rs  fit.rs  mass.rs
crab-world/src/bot/rig/: baked.rs  colliders.rs  fallback.rs  mod.rs  recipe.rs
crab-world/src/bot/skin/: mod.rs  pairing.rs  weights.rs
crab-world/src/eval/: wire.rs
crab-world/src/physics/: mod.rs  world.rs
crab-world/src/play/: cameras.rs  controls.rs  demo.rs  graph.rs  hot_reload.rs  manual_control.rs  mod.rs  policy.rs  render_video.rs  rig_pose.rs  target_ball.rs
crab-world/src/training/: algorithm.rs  best.rs  checkpoint.rs  curriculum.rs  envelope.rs  gpu.rs  inproc.rs  migrate.rs  mod.rs  normalizer.rs  reward.rs  systems.rs  targets.rs  update.rs
crab-world/src/training/inproc/: learner.rs
crab-world/src/training/systems/: lifecycle.rs  mod.rs  shove.rs  state.rs  step.rs
crab-world/tests/: terrain_query_bench.rs
crab-world/tests/data/golden-mlp256/: actions.hex
crab-world/tests/data/golden-mlp512x3-env/: actions.hex
docs/: gcr-mp-host-authoritative.md  skybox-story.md
game/: Cargo.toml
game/src/: main.rs
game/src/cmd/: checkpoint_check.rs  fp_screenshot.rs  mod.rs  net.rs  net_join.rs  net_screenshot.rs  nn_crab_join_xpeer.rs  nn_crab_probe.rs  nn_crab_vehicle_stability.rs  nn_crab_xpeer.rs  play.rs  shared.rs  solo.rs  telemetry_collector.rs
game/tests/: armed_render_smoke.rs  transform_ownership_gate.rs
meshfit/: Cargo.toml
meshfit/src/: audit.rs  bake.rs  containment.rs  fit.rs  gltf_load.rs  main.rs
net/: Cargo.toml
net/src/: articulation.rs  cadence.rs  client.rs  controls.rs  cordic.rs  crab_slot.rs  determinism_probe.rs  external_crab.rs  formation.rs  lib.rs  lockstep.rs  membership.rs  menu.rs  net_loop.rs  probe.rs  render.rs  rollout_env.rs  roster.rs  server.rs  sim.rs  snapshot.rs  telemetry.rs  transport.rs  wire.rs
net/src/external_crab/: probe.rs
net/src/render/: app.rs  articulation.rs  brain_swap.rs  debug_wireframe.rs  driver.rs  hud.rs  input.rs  menu.rs  mod.rs  pose.rs  render_mode.rs  scene.rs  screenshot.rs  tests.rs  vehicle_view.rs
otel/: Cargo.toml  proof-rl-otel.sh
otel/examples/: smoke.rs
otel/src/: lib.rs
rl-core/: Cargo.toml
rl-core/src/: controls.rs  debug_sliders.rs  fnv.rs  lib.rs  play.rs  screenshot.rs
rl-core/src/bot/: body.rs  collider_check.rs  determinism_probe.rs  meshfit.rs  mod.rs  physics_digest.rs  rig.rs  sensor.rs  sim_truth_test.rs  skin.rs  skin_diag.rs  test_util.rs
rl-core/src/net/: cadence.rs  controls.rs  cordic.rs  external_crab.rs  lockstep.rs  membership.rs  menu.rs  mod.rs  net_loop.rs  render.rs  sim.rs  solo_crab.rs  telemetry.rs  transport.rs
rl-core/src/physics/: mod.rs  world.rs
rl-core/src/play/: cameras.rs  claw_demo.rs  controls.rs  demo.rs  mod.rs  policy.rs  rig_pose.rs  target_ball.rs
rl-core/src/player/: graph.rs
rl-core/src/training/: algorithm.rs  bench.rs  checkpoint.rs  curriculum.rs  inproc.rs  metrics.rs  mod.rs  normalizer.rs  reward.rs  session.rs  systems.rs  watchdog.rs
rl-demo/: Cargo.toml
rl-demo/src/: main.rs
rl-train/: Cargo.toml
rl-train/src/: main.rs
rl-update-ui/: Cargo.toml
rl-update-ui/src/: main.rs
scripts/: fetch-sally.sh  gcr82-xpeer-determinism.sh  profile-game.sh
scripts/terrain-bake/: README.md  bake.py  serve-model.sh
smoke-ckpt/: shape.txt  ticks.txt
smoke-ckpt/best-mispromoted-clamplie-20260630T010618Z/: ticks.txt
src/: collider_editor.rs  debug_sliders.rs  lib.rs  main.rs  play.rs  wrist_tune.rs
src/bot/: actuator.rs  body.rs  brain.rs  collider_check.rs  meshfit.rs  mod.rs  reset_test.rs  rig.rs  sensor.rs  sim_truth_test.rs  skin.rs  skin_diag.rs  test_util.rs
src/combat/: arena.rs  mod.rs  scoring.rs
src/net/: lockstep.rs  membership.rs  mod.rs  net_loop.rs  render.rs  sim.rs  solo_crab.rs  telemetry.rs  transport.rs
src/physics/: mod.rs  world.rs
src/player/: camera.rs  controller.rs  graph.rs  mod.rs
src/training/: algorithm.rs  inproc.rs  mod.rs  replay.rs  session.rs  watchdog.rs
test-watchdog/: Cargo.toml
test-watchdog/src/: lib.rs
