[package]
name = "rl"
version = "0.1.0"
edition = "2024"
# Dual MIT / Apache-2.0 (the Rust-ecosystem default); see LICENSE-MIT, LICENSE-APACHE.
# Covers this repo's source ONLY — bundled-but-gitignored art assets carry their own
# separate terms (see NOTICE).
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.18"
bevy_rapier3d = "0.34"
# Immediate-mode GUI for the TEMPORARY in-demo `--debug-sliders` physics panel
# (src/debug_sliders.rs). 0.39 is the bevy_egui release series that tracks bevy
# 0.18. The panel plugin is only added behind the flag, so training/headless never
# instantiate it — zero runtime cost; the crate is compiled into the one binary
# regardless of mode.
bevy_egui = "0.39"
rand = "0.8"
serde = { version = "1", features = ["derive"] }

# Read the skinned glTF's skeleton (bind-pose bone transforms) + skin weights to
# derive colliders (`src/bot/meshfit.rs`). `utils` enables
# the accessor readers; `names` keeps node names (the bone↔part mapping keys on
# them). No `import` (it would drag in `image`); we feed the GLB bytes to
# `Gltf::from_slice`. Already in the tree via bevy at this version, so it adds no
# new crate. A normal dependency, not dev-only: the collider-fitting runs in the
# shipped binary under dev subcommands (e.g. `--verify-colliders`), not `cargo test`.
gltf = { version = "1.4.1", default-features = false, features = ["utils", "names"] }

burn = { version = "0.20", features = ["autodiff", "ndarray"] }
rand_distr = "0.5"
clap = { version = "4", features = ["derive"] }
bincode = "1"
# POSIX syscalls the multiprocess trainer needs and std doesn't expose:
# setpriority (nice the learner + workers so a foreground game preempts them) and
# setpgid/killpg (put workers in one process group, kill the group on shutdown so
# none are orphaned). Already in the tree transitively, so it adds no new crate.
libc = "0.2"

# --- multiplayer netcode foundation (src/net/, src/bin/game.rs — rl#39) ----------
# P2P transport + LAN discovery for couch co-op (the boys + dad, no server). `iroh`
# is QUIC + endpoint identity; `iroh-mdns-address-lookup` is its mDNS local-network
# discovery (peers find each other by endpoint id on the LAN). Version-matched to
# the same iroh 1.0 the deck-control tool runs. Internet relay (Steam) is a later
# layer; the game binary disables the relay and uses only mDNS.
iroh = "1"
iroh-mdns-address-lookup = "0.4"
# Async stream combinators (`StreamExt`) for the mDNS discovery event stream; iroh
# re-exports this same crate, so it adds nothing new to the tree.
n0-future = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
# Seedable, reproducible PRNG for the deterministic sim. ChaCha8 is the one
# sanctioned randomness source in `net::sim` — its stream is identical across
# machines from a seed, unlike `thread_rng`, which is the whole point for lockstep.
rand_chacha = "0.3"

# The netcode lives in a library target so both `game` and the test harness can use
# it; the existing single-binary training app (src/main.rs) does not depend on it.
[lib]
name = "rl"
path = "src/lib.rs"

# Phase 0 netcode skeleton: headless LAN discovery + deterministic lockstep demo.
[[bin]]
name = "game"
path = "src/bin/game.rs"

# Enable optimizations in dev for physics sim performance
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
rapier3d = { git = "https://github.com/bddap-bot/rapier", rev = "3ccc03d91ec0cff7ddd370c8e9a34240991f9875" }
