[workspace]
resolver = "3"
members = ["rl-core", "rl-train", "rl-demo", "game", "rl-update-ui"]

# Shared metadata + dependency versions, inherited by every member via
# `foo.workspace = true`. ONE source for each version/feature set, so the four
# crates can't drift apart on a bump (the win the workspace is meant to lock in).
[workspace.package]
version = "0.1.0"
edition = "2024"
# Dual MIT / Apache-2.0 (the Rust-ecosystem default); see LICENSE-MIT, LICENSE-APACHE.
# Covers this repo's source ONLY — bundled-but-gitignored art assets carry their own
# separate terms (see NOTICE).
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# --- render stack: pulled ONLY by rl-core's `render` feature + the rendering bins.
# rl-train never enables `render`, so it links none of these. bevy/bevy_rapier3d at
# default-features=false so the render-free build drops bevy_render/bevy_pbr/wgpu and
# rapier's render integration; the `render` feature flips their defaults back on (see
# rl-core/Cargo.toml [features]).
bevy = { version = "0.18", default-features = false }
bevy_rapier3d = { version = "0.34", default-features = false }
# Immediate-mode GUI for the game's boot menu (net::menu). 0.39 tracks
# bevy 0.18. Optional in rl-core, enabled by `render`.
bevy_egui = "0.39"

rand = "0.8"
serde = { version = "1", features = ["derive"] }

# Read the skinned glTF's skeleton (bind-pose bone transforms) + skin weights to
# derive colliders (rl-core/src/bot/meshfit.rs). `utils` enables the accessor
# readers; `names` keeps node names (the bone<->part mapping keys on them). No
# `import` (it would drag in `image`); the GLB bytes feed `Gltf::from_slice`. Already
# in the tree via bevy at this version, so it adds no new crate. A normal dependency,
# not dev-only: collider-fitting runs in the shipped binary under dev subcommands
# (e.g. `--verify-colliders`), not `cargo test`.
gltf = { version = "1.4.1", default-features = false, features = ["utils", "names"] }

burn = { version = "0.20", features = ["autodiff", "ndarray"] }
# Only pulled in by the `wgpu` feature, and ONLY to flip naga 26's `termcolor` feature
# on. naga 26 is already in the lock via bevy's wgpu — this adds no crate, it just
# activates the feature that makes naga 26 compile alongside naga 27. Not used in any
# code path. (See rl-core's [features].wgpu for the full rationale.)
naga = { version = "26" }
rand_distr = "0.5"
clap = { version = "4", features = ["derive"] }
bincode = "1"
# POSIX syscalls the multiprocess trainer needs and std doesn't expose:
# setpriority (nice the learner + workers so a foreground game preempts them) and
# setpgid/killpg (put workers in one process group, kill the group on shutdown so
# none are orphaned). Already in the tree transitively, so it adds no new crate.
libc = "0.2"

# --- multiplayer netcode foundation (net/, game) ---------------------------------
# P2P transport + LAN discovery for couch co-op (the boys + dad, no server). `iroh`
# is QUIC + endpoint identity; `iroh-mdns-address-lookup` is its mDNS local-network
# discovery. Version-matched to the same iroh 1.0 the deck-control tool runs.
iroh = "1"
iroh-mdns-address-lookup = "0.4"
# Async stream combinators (`StreamExt`) for the mDNS discovery event stream; iroh
# re-exports this same crate, so it adds nothing new to the tree.
n0-future = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
# Seedable, reproducible PRNG for the deterministic sim. ChaCha8 is the one sanctioned
# randomness source in net::sim — its stream is identical across machines from a seed,
# unlike `thread_rng`, which is the whole point for lockstep.
rand_chacha = "0.3"

# Enable optimizations in dev for physics sim performance.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
rapier3d = { git = "https://github.com/bddap-bot/rapier", rev = "3ccc03d91ec0cff7ddd370c8e9a34240991f9875" }
