[workspace]
resolver = "3"
members = [
    "crab-world",
    "net",
    "rl-train",
    "rl-demo",
    "game",
    "rl-update-ui",
    "otel",
    "meshfit",
    "test-watchdog",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bevy = { version = "0.18", default-features = false }
bevy_rapier3d = { version = "0.34", default-features = false }
bevy_egui = "0.39"

rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

gltf = { version = "1.4.1", default-features = false, features = ["utils", "names"] }

burn = { version = "0.20", features = ["autodiff", "ndarray"] }
naga = { version = "26" }
clap = { version = "4", features = ["derive", "env"] }
bincode = "1"
# One POSIX syscall std doesn't expose: setpriority (nice the in-process trainer so a
# foreground game preempts it — `training/inproc.rs`). Already in the tree
# transitively, so it adds no new crate.
libc = "0.2"
ctor = "1.0.9"

iroh = "1"
# The type iroh's send_datagram takes; already in the tree transitively via iroh.
bytes = "1"
iroh-mdns-address-lookup = "0.4"
n0-future = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand_chacha = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true

[patch.crates-io]
rapier3d = { git = "https://github.com/bddap-bot/rapier", rev = "3ccc03d91ec0cff7ddd370c8e9a34240991f9875" }
