[package]
name = "crab-world"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "crab_world"
path = "src/lib.rs"

[features]
render = ["bevy/default", "bevy_rapier3d/default"]

# Rapier's libm transcendentals, for cross-platform bit-equality probes ONLY. Deliberately
# NOT part of `render`: the trainer builds render-off (ED off), so shipping ED in game
# builds would fork shipped float behavior from what the policy trained on (rl#223).
enhanced-determinism = ["rapier3d/enhanced-determinism"]

wgpu = ["burn/wgpu", "dep:naga", "naga/termcolor"]

[dependencies]
bevy = { workspace = true, features = [
    "std",
    "multi_threaded",
    "bevy_asset",
    "bevy_scene",
    "bevy_state",
    "bevy_log",
] }
bevy_rapier3d = { workspace = true, features = ["dim3"] }
rapier3d = { version = "0.32", default-features = false }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
burn.workspace = true
naga = { workspace = true, optional = true }
clap.workspace = true
bincode.workspace = true
libc.workspace = true
tracing.workspace = true

[dev-dependencies]
ctor.workspace = true
test-watchdog = { path = "../test-watchdog" }
# The runtime never parses the glb (colliders come from the baked table, bddap/rl#20);
# only the skin-weight audit tests still read it directly.
gltf.workspace = true
