[package]
name = "game"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
net = { path = "../net", features = ["render"] }
crab-world = { path = "../crab-world", features = ["render"] }
otel = { path = "../otel" }
anyhow.workspace = true
clap.workspace = true
iroh.workspace = true
tokio.workspace = true
# The headless net loop reports progress/faults as tracing events (not println), so they
# ride the same subscriber + OTLP export as every other game fault (#133).
tracing.workspace = true
