[package]
name = "game"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "game"
path = "src/main.rs"

[features]
# Cross-platform bit-equality probing (`game nn-crab-probe` on two machines): pulls
# rapier's libm transcendentals in. Never on by default — see crab-world's feature note.
enhanced-determinism = ["net/enhanced-determinism", "crab-world/enhanced-determinism"]

[dependencies]
net = { path = "../net", features = ["render"] }
crab-world = { path = "../crab-world", features = ["render"] }
otel = { path = "../otel" }
anyhow.workspace = true
clap.workspace = true
iroh.workspace = true
tokio.workspace = true
# The headless net loop reports progress/faults as tracing events (not println), so they
# ride the same subscriber + OTLP export as every other game fault (#133).
tracing.workspace = true

[dev-dependencies]
ctor.workspace = true
test-watchdog = { path = "../test-watchdog" }
