[package]
name = "net"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "net"
path = "src/lib.rs"

[features]
render = [
    "crab-world/render",
    "bevy/default",
    "bevy_rapier3d/default",
    "dep:bevy_egui",
]

enhanced-determinism = ["crab-world/enhanced-determinism"]

[dependencies]
crab-world = { path = "../crab-world" }
bevy = { workspace = true, features = [
    "std",
    "multi_threaded",
    "bevy_asset",
    "bevy_scene",
    "bevy_state",
    "bevy_log",
] }
bevy_rapier3d = { workspace = true, features = ["dim3"] }
bevy_egui = { workspace = true, optional = true }
rand.workspace = true
serde.workspace = true
bincode.workspace = true
rand_chacha.workspace = true

iroh.workspace = true
bytes.workspace = true
iroh-mdns-address-lookup.workspace = true
n0-future.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
