[package]
name = "otel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "otel"
path = "src/lib.rs"

[dependencies]
opentelemetry = { version = "0.28", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.28", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.28", default-features = false, features = [
    "trace",
    "metrics",
    "logs",
    "http-proto",
    "reqwest-blocking-client",
] }
tracing-opentelemetry = "0.29"
opentelemetry-appender-tracing = "0.28"
tracing = { workspace = true }
# tracing-subscriber's default `tracing-log` feature installs the `log`->tracing bridge
# (wgpu_hal, rapier, …) inside `.init()`, so no direct tracing-log dep here — a pre-set
# LogTracer makes `.init()` panic (see init()).
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
