[package]
name = "otel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "otel"
path = "src/lib.rs"

[dependencies]
# No "trace" features and no tracing-opentelemetry: span export is deliberately absent
# (bevy opens per-frame spans unconditionally — see the note in init()).
opentelemetry = { version = "0.28", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.28", features = ["metrics", "logs"] }
opentelemetry-otlp = { version = "0.28", default-features = false, features = [
    "metrics",
    "logs",
    "http-proto",
    "reqwest-blocking-client",
] }
opentelemetry-appender-tracing = "0.28"
tracing = { workspace = true }
# tracing-subscriber's default `tracing-log` feature installs the `log`->tracing bridge
# (wgpu_hal, rapier, …) inside `.init()`, so no direct tracing-log dep here — a pre-set
# LogTracer makes `.init()` panic (see init()).
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
# `OtelArgs` — the `--otel` flag lives beside the code that reads it.
clap = { workspace = true }
