[package]
name = "rl-demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rl-demo"
path = "src/main.rs"

[dependencies]
crab-world = { path = "../crab-world", features = ["render"] }
bevy.workspace = true
bevy_rapier3d.workspace = true
clap.workspace = true
otel = { path = "../otel" }
