[package]
name = "rl-train"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rl-train"
path = "src/main.rs"

[features]
default = ["wgpu"]
wgpu = ["crab-world/wgpu"]

[dependencies]
crab-world = { path = "../crab-world" }
bevy.workspace = true
clap.workspace = true
otel = { path = "../otel" }
