[package]
name = "rl-update-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rl-update-ui"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true, features = [
    "std",
    "multi_threaded",
    "bevy_asset",
    "bevy_winit",
    "bevy_window",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_ui_render",
    "bevy_text",
    "default_font",
    "bevy_gilrs",
    "png",
    "x11",
    "wayland",
    "bevy_log",
] }
clap = { workspace = true, features = ["env"] }
serde_json = "1"
